# parallel-processes

./: README.md
lab01/: CMakeLists.txt  board.c  board.h  defines.h  error.c  error.h  main.c  path_search.c  path_search.h  task.c  task.h
